syntax = "proto3";

package tiny_muduo_rpc;

option cc_generic_services = true;

import "rpc.proto";

message ListRpcRequest
{
  oneof optional_service_name{ string service_name = 1;}
  oneof optional_list_method{ bool list_method = 2;}
}

message ListRpcResponse
{
  ErrorCode error = 1;
  repeated string service_name = 2;
  repeated string method_name = 3;
}

message GetServiceRequest
{
  string service_name = 1;
}

message GetServiceResponse
{
  ErrorCode error = 1;
  repeated string proto_file = 2;
  repeated string proto_file_name = 3;
}

// the meta service
service RpcService
{
  rpc listRpc (ListRpcRequest) returns (ListRpcResponse);
  rpc getService (GetServiceRequest) returns (GetServiceResponse);
}

